--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,12 @@
 @import "./tipografia.css";
 @import "./cores.css";
 @import "./componentes.css";
+@import "./home.css";
+@import "./homendeferro.css";
+@import "./capitaoamerica.css";
+@import "./viuvanegra.css";
+@import "./thor.css";
+@import "./gaviaoarqueiro.css";
+@import "./hulk.css";
+ 
 
