--- a/css/home.css
+++ b/css/home.css
@@ -4,16 +4,52 @@
 .menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 20px 20px;
   justify-content: flex-end;
 }
 .menu a{
- padding: 10px;
- background: var(--cor-12);
- border: 1px solid var(--cor-p1);
  text-transform: uppercase;
  text-decoration: none;
  cursor: pointer;
+}
+.inicio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
+}
+.quadrinhos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
+}
+.contato {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
 }
 @media (max-width: 450px) {
   .menu {
