Commit Final dia 05 02 2023

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "./cores.css";
 @import "./componentes.css";
 @import "./home.css";
+@import "./introducao.css";
 @import "./homendeferro.css";
 @import "./capitaoamerica.css";
 @import "./viuvanegra.css";
