--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,8 +1,101 @@
-.introducao {
+.introducao-bg {
   width: 100%;
   height: 707px;  
   background-image: url(../media/img/marvel2.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+.introducao .titulo-principal {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 90px;
+}
+.introducao .quadrado {
+  width: 238px; 
+  height: 56px;
+  background: var(--cor-13);
+  margin: 0 auto;
+}
+.introducao .titulo-secundario {
+  padding: 10px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  background: var(--cor-13);
+  text-transform: uppercase;
+  margin-top: 80px;
+}
+.introducao .border {
+  width: 238px;
+  height: 2px;
+  background: var(--cor-p1);
+  border-radius: 5px;
+  margin: 0 auto;
+  display: block;
+}
+
+
+
+
+
+
+/* Home */
+.header {
+  padding: 20px;
+}
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px 20px;
+  justify-content: flex-end;
+}
+.menu a{
+ text-transform: uppercase;
+ text-decoration: none;
+ cursor: pointer;
+}
+.inicio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
+}
+.quadrinhos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
+}
+.contato {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px;
+  gap: 15px;
+  background: var(--cor-12);
+  border: 1px solid var(--cor-p1);
+  outline-offset: -3px;
+  position: relative;
+  flex: 0 0 90px;
+}
+@media (max-width: 450px) {
+  .menu {
+    justify-content: center;
+  }
 }
