--- a/css/home.css
+++ b/css/home.css
@@ -1,45 +1,3 @@
-.introducao-bg {
-  width: 100%;
-  height: 707px;  
-  background-image: url(../media/img/marvel2.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.introducao .titulo-principal {
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 90px;
-}
-.introducao .quadrado {
-  width: 238px; 
-  height: 56px;
-  background: var(--cor-13);
-  margin: 0 auto;
-}
-.introducao .titulo-secundario {
-  padding: 10px;
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  background: var(--cor-13);
-  text-transform: uppercase;
-  margin-top: 80px;
-}
-.introducao .border {
-  width: 238px;
-  height: 2px;
-  background: var(--cor-p1);
-  border-radius: 5px;
-  margin: 0 auto;
-  display: block;
-}
-
-
-
-
-
-
 /* Home */
 .header {
   padding: 20px;
@@ -47,7 +5,7 @@
 .menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px 20px;
+  gap: 10px 20px;
   justify-content: flex-end;
 }
 .menu a{
@@ -99,3 +57,40 @@
     justify-content: center;
   }
 }
+
+/* Introduçao */
+.main-bg {
+  height: 707px;  
+  background-image: url(../media/img/marvel2.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.main .titulo-principal {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 90px;
+}
+.main .quadrado {
+  width: 280px;
+  height: 56px;
+  background: var(--cor-13);
+  margin: 0 auto;
+}
+.main .titulo-secundario {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  background: var(--cor-13);
+  text-transform: uppercase;
+  margin-top: 75px;
+}
+.main .border {
+  width: 238px;
+  height: 2px;
+  background: var(--cor-p1);
+  border-radius: 5px;
+  margin: 0 auto;
+  display: block;
+}
+
