--- a/css/home.css
+++ b/css/home.css
@@ -167,3 +167,56 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+/* História */
+.historia-bg {
+  background: var(--cor-13);
+}
+.historia {
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container-historia {
+  display: grid;
+  justify-content: start;
+  align-items: center;
+  width: 850px;
+  height: 60px;
+  background: var(--cor-p2);
+  border: 1px solid var(--c13, #000);
+  margin-top: 84px;
+}
+.titulo-historia {
+  padding-left: 24px;
+  text-transform: uppercase;
+}
+.container-artigo {
+  width: 850px;
+  height: 666px;
+  background: var(--cor-p1);
+}
+.container-artigo p + p {
+  margin-top: 36px;
+}
+.paragrafo {
+  margin-top: 16px;
+  margin-right: 16px;
+  margin-left: 16px;
+  text-align: justify;
+}
+
+/* Footer */
+.rodape-bg {
+  background: var(--cor-13);
+}
+.rodape {
+  margin: 0 auto;
+}
+.footer-texto{
+  padding-top:100px;
+  text-align: center;
+  padding-bottom: 16px;
+}
