--- a/css/home.css
+++ b/css/home.css
@@ -52,7 +52,7 @@
   position: relative;
   flex: 0 0 90px;
 }
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .menu {
     justify-content: center;
   }
@@ -98,7 +98,7 @@
     margin-top: 125px;
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 500px) {
 .main .titulo-principal {
   margin-top: 40px;
 }
@@ -234,6 +234,10 @@
 .paragrafo:last-child {
   margin-bottom: 20px;
 }
+/* .container-artigo img {
+  float: left;
+  width: 33%;
+} */
 
 @media (max-width: 450px) {
 
