--- a/css/home.css
+++ b/css/home.css
@@ -115,9 +115,6 @@
 }
 }
 /* Herois */
-.herois-bg {
-  background: var(--cor-13);
-}
 .herois {
   display: flex;
   flex-wrap: wrap;
@@ -191,9 +188,6 @@
 
 
 /* História */
-.historia-bg {
-  background: var(--cor-13);
-}
 .historia {
   display: flex;
   flex-wrap: wrap;
@@ -210,7 +204,7 @@
   width: 850px;
   height: 60px;
   background: var(--cor-p2);
-  border: 1px solid var(--c13, #000);
+  border-bottom: 1px solid var(--c13, #000);
   margin-top: 84px;
 }
 .titulo-historia {
@@ -221,6 +215,7 @@
   width: 850px;
   height: auto;
   background: var(--cor-p1);
+  text-indent: 1.5em;
 }
 .container-artigo p + p {
   margin-top: 36px;
@@ -257,9 +252,6 @@
 }
 
 /* Footer */
-.rodape-bg {
-  background: var(--cor-13);
-}
 .rodape {
   margin: 0 auto;
 }
