--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@
  text-transform: uppercase;
  text-decoration: none;
  cursor: pointer;
- padding: 10px 10px;
+ padding: 10px;
 
 }
 .inicio {
@@ -26,7 +26,7 @@
   border: 1px solid var(--cor-p1);
   outline-offset: -3px;
   position: relative;
-  flex: 0 0 90px;
+  flex: 0 0 110px;
 }
 .quadrinhos {
   display: flex;
@@ -39,7 +39,7 @@
   border: 1px solid var(--cor-p1);
   outline-offset: -3px;
   position: relative;
-  flex: 0 0 90px;
+  flex: 0 0 110px;
 }
 .contato {
   display: flex;
@@ -52,7 +52,7 @@
   border: 1px solid var(--cor-p1);
   outline-offset: -3px;
   position: relative;
-  flex: 0 0 90px;
+  flex: 0 0 110px;
 }
 @media (max-width: 500px) {
   .menu {
