--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,6 @@
 @import "./componentes.css";
 @import "./home.css";
 @import "./quadrinhos.css";
-@import "./homemdeferro.css";
+@import "./vingadores.css";
 
 
