--- a/css/quadrinhos.css
+++ b/css/quadrinhos.css
@@ -3,7 +3,8 @@
   justify-content: flex-start;
   align-items: center;
   width: 850px;
-  height: 60px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background: var(--cor-p2);
   border-bottom: 1px solid var(--c13, #000);
   margin-top: -30px;
